[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Silkscreen-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://DestinationArrivalScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="DestinationArrivalScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1200, 700 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="CongratsMessageLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 44.0
margin_right = 1200.0
margin_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "fuckular thrombosis"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 1200.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 100 )

[node name="PayoutLabel" type="Label" parent="Panel/VBoxContainer"]
modulate = Color( 0.188235, 0.792157, 0.0901961, 1 )
margin_top = 214.0
margin_right = 1200.0
margin_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "fuckular thrombosis"
align = 1
valign = 1

[node name="KillSwitch" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="KillSwitch" to="." method="_on_KillSwitch_timeout"]
